nginx-kustomize/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: panchanandevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-nginx-service
                port:
                  number: 8000
